Move version to build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,5 @@
 buildscript {
-  def properties = new Properties()
-  properties.load(new FileInputStream(new File(rootDir, "version.properties")))
-  def major = properties['version.major'] as int
-  def minor = properties['version.minor'] as int
-  def patch = properties['version.patch'] as int
-  def suffix = properties['version.suffix']?.toString()?.trim() ?: ""
-  def snapshot = properties['version.snapshot'].toBoolean()
-  version = "$major.$minor.$patch" + (suffix.isAllWhitespace() ? '' : "-$suffix") + (snapshot ? '-SNAPSHOT' : '')
+  version = '1.1.0'
   group = 'com.joom'
 
   ext.androidCompileSdkVersion = 27
