--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "xxHash"]
-	path = xxHash
-	url = ./external/xxHash
+[submodule "library/external/xxHash"]
+	path = library/external/xxHash
+	url = https://github.com/Cyan4973/xxHash.git
