--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
   version = '1.1.0'
-  group = 'com.joom.xxhash'
+  group = 'com.joom'
 
   ext.androidCompileSdkVersion = 29
   ext.androidBuildToolsVersion = "29.0.0"
