--- a/build.gradle
+++ b/build.gradle
@@ -2,21 +2,20 @@ buildscript {
   version = '1.2.0'
   group = 'com.joom'
 
-  ext.androidCompileSdkVersion = 29
-  ext.androidBuildToolsVersion = "29.0.0"
+  ext.androidCompileSdkVersion = 30
+  ext.androidBuildToolsVersion = "30.0.3"
   ext.androidMinSdkVersion = 16
-  ext.androidTargetSdkVersion = 29
+  ext.androidTargetSdkVersion = 30
 
-  ext.androidToolsVersion = '3.4.1'
-  ext.kotlinVersion = '1.3.41'
-  ext.bintrayVersion = '1.8.4'
+  ext.androidToolsVersion = '4.2.0-beta06'
+  ext.kotlinVersion = '1.4.32'
 
   ext.jsr305Version = '3.0.2'
 
-  ext.junitVersion = '4.12'
-  ext.androidxEspressoVersion = '3.2.0'
-  ext.androidxTestRunnerVersion = '1.2.0'
-  ext.androidxTestExtJunitVersion = '1.1.1'
+  ext.junitVersion = '4.13.2'
+  ext.androidxEspressoVersion = '3.3.0'
+  ext.androidxTestRunnerVersion = '1.3.0'
+  ext.androidxTestExtJunitVersion = '1.1.2'
 
   repositories {
     google()
